Mise à jour du projet avec les dernières modifications

--- a/service.html
+++ b/service.html
@@ -889,48 +889,40 @@
     <div class="container nav-container">
       <div class="nav-logo"><h2></i> Porokhane Digital</h2></div>
       <ul class="nav-menu">
-        <li><a href="#accueil" class="nav-link">Qui sommes nous</a></li>
+        <li><a href="index.html#accueil" class="nav-link">Accueil</a></li>
+        <li><a href="a-propos.html" class="nav-link">À propos</a></li>
         <!-- Formations -->
         <li class="nav-item">
-          <a href="#formations" class="nav-link">
-            Formations
-            <i class="fas fa-chevron-down"></i>
-          </a>
+          <a href="formations.html" class="nav-link">Formations <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
-            <li><a href="#robotique" class="submenu-link"><i class="fas fa-robot"></i> Robotique</a></li>
-            <li><a href="#impression3d" class="submenu-link"><i class="fas fa-print"></i> Impression 3D</a></li>
-            <li><a href="#cybersecurite" class="submenu-link"><i class="fas fa-shield-alt"></i> Cybersécurité</a></li>
+            <li><a href="formations.html#robotique" class="submenu-link"><i class="fas fa-robot"></i> Robotique</a></li>
+            <li><a href="formations.html#impression3d" class="submenu-link"><i class="fas fa-print"></i> Impression 3D</a></li>
+            <li><a href="formations.html#cybersecurite" class="submenu-link"><i class="fas fa-shield-alt"></i> Cybersécurité</a></li>
           </ul>
         </li>
         
         <!-- Marketing -->
         <li class="nav-item">
-          <a href="#marketing" class="nav-link">
-            Marketing
-            <i class="fas fa-chevron-down"></i>
-          </a>
+          <a href="marketing.html" class="nav-link">Marketing <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
-            <li><a href="#audit" class="submenu-link"><i class="fas fa-search"></i> Audit Express</a></li>
-            <li><a href="#creation-site" class="submenu-link"><i class="fas fa-laptop-code"></i> Création/Réfonte de site</a></li>
-            <li><a href="#strategie" class="submenu-link"><i class="fas fa-chess"></i> Stratégie digitale</a></li>
-            <li><a href="#seo" class="submenu-link"><i class="fas fa-search-plus"></i> Référencement naturel</a></li>
-            <li><a href="#reseaux-sociaux" class="submenu-link"><i class="fas fa-hashtag"></i> Réseaux sociaux</a></li>
+            <li><a href="marketing.html#audit" class="submenu-link"><i class="fas fa-search"></i> Audit Express</a></li>
+            <li><a href="marketing.html#creation-site" class="submenu-link"><i class="fas fa-laptop-code"></i> Création/Réfonte de site</a></li>
+            <li><a href="marketing.html#strategie" class="submenu-link"><i class="fas fa-chess"></i> Stratégie digitale</a></li>
+            <li><a href="marketing.html#seo" class="submenu-link"><i class="fas fa-search-plus"></i> Référencement naturel</a></li>
+            <li><a href="marketing.html#reseaux-sociaux" class="submenu-link"><i class="fas fa-hashtag"></i> Réseaux sociaux</a></li>
           </ul>
         </li>
         
         <!-- Accompagnement -->
         <li class="nav-item">
-          <a href="#accompagnement" class="nav-link">
-            Accompagnement
-            <i class="fas fa-chevron-down"></i>
-          </a>
+          <a href="accompagnement.html" class="nav-link">Accompagnement <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
-            <li><a href="#automatisation" class="submenu-link"><i class="fas fa-cogs"></i> Automatisation</a></li>
-            <li><a href="#bdd" class="submenu-link"><i class="fas fa-database"></i> Bases de données</a></li>
-            <li><a href="#ia" class="submenu-link"><i class="fas fa-brain"></i> Intelligence Artificielle</a></li>
+            <li><a href="accompagnement.html#automatisation" class="submenu-link"><i class="fas fa-cogs"></i> Automatisation</a></li>
+            <li><a href="accompagnement.html#bdd" class="submenu-link"><i class="fas fa-database"></i> Bases de données</a></li>
+            <li><a href="accompagnement.html#ia" class="submenu-link"><i class="fas fa-brain"></i> Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="#blog" class="nav-link">Actualités</a></li>
+        <li><a href="blog.html" class="nav-link">Actualités</a></li>
         <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
         <li>
           <a href="devis.html" class="nav-devis">
@@ -1082,21 +1074,23 @@
       <div class="footer-section">
         <h4>Nos Services</h4>
         <ul>
-          <li><a href="#services"><i class="fas fa-chevron-right"></i> Développement Web</a></li>
-          <li><a href="#services"><i class="fas fa-chevron-right"></i> Applications Mobiles</a></li>
-          <li><a href="#services"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
-          <li><a href="#services"><i class="fas fa-chevron-right"></i> Solutions Cloud</a></li>
-          <li><a href="#services"><i class="fas fa-chevron-right"></i> Cybersécurité</a></li>
+          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Développement Web</a></li>
+          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Applications Mobiles</a></li>
+          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
+          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Solutions Cloud</a></li>
+          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Cybersécurité</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h4>Navigation</h4>
         <ul>
-          <li><a href="#accueil"><i class="fas fa-chevron-right"></i> Accueil</a></li>
-          <li><a href="#services"><i class="fas fa-chevron-right"></i> Services</a></li>
-          <li><a href="#blog"><i class="fas fa-chevron-right"></i> Blog</a></li>
-          <li><a href="#temoignages"><i class="fas fa-chevron-right"></i> Témoignages</a></li>
-          <li><a href="#contact"><i class="fas fa-chevron-right"></i> Contact</a></li>
+          <li><a href="index.html#accueil"><i class="fas fa-chevron-right"></i> Accueil</a></li>
+          <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Services</a></li>
+          <li><a href="blog.html"><i class="fas fa-chevron-right"></i> Actualités</a></li>
+          <li><a href="index.html#temoignages"><i class="fas fa-chevron-right"></i> Témoignages</a></li>
+          <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
+          <li><a href="devis.html"><i class="fas fa-chevron-right"></i> Devis</a></li>
+          <li><a href="index.html#certifications"><i class="fas fa-chevron-right"></i> Certifications</a></li>
         </ul>
       </div>
       <div class="footer-section">
