--- a/test.html
+++ b/test.html
@@ -294,9 +294,9 @@
     <h1>Transformez votre avenir digital</h1>
     <p>Porokhane Digital vous accompagne avec des solutions innovantes et sur mesure pour propulser votre entreprise.</p>
     <div class="accueil-buttons">
-      <button class="btn btn-services" onclick="location.href='#services'">Découvrir nos services</button>
-      <button class="btn btn-devis" onclick="location.href='#devis'">Demander un devis</button>
-      <button class="btn btn-contact" onclick="location.href='#contact'">Nous contacter</button>
+      <button class="btn btn-services" onclick="location.href='index.html#services'">Découvrir nos services</button>
+      <button class="btn btn-devis" onclick="location.href='index.html#devis'">Demander un devis</button>
+      <button class="btn btn-contact" onclick="location.href='index.html#contact'">Nous contacter</button>
     </div>
   </section>
 
@@ -305,7 +305,7 @@
 
 
   <section class="services-section" id="services">
-    <button class="btn-tous-services" onclick="location.href='#allservices'">Voir tous les services</button>
+    <button class="btn-tous-services" onclick="location.href='index.html#allservices'">Voir tous les services</button>
     <h2>Nos Services</h2>
   
     <div class="services-container">
