--- a/devis.html
+++ b/devis.html
@@ -1419,9 +1419,9 @@
             <i class="fas fa-chevron-down"></i>
           </a>
           <ul class="submenu">
-            <li><a href="formations.html#robotique" class="submenu-link"><i class="fas fa-robot"></i> Robotique</a></li>
-            <li><a href="formations.html#impression3d" class="submenu-link"><i class="fas fa-print"></i> Impression 3D</a></li>
-            <li><a href="formations.html#cybersecurite" class="submenu-link"><i class="fas fa-shield-alt"></i> Cybersécurité</a></li>
+            <li><a href="robotique.html" class="submenu-link"><i class="fas fa-robot"></i> Robotique</a></li>
+            <li><a href="impression_3D.html" class="submenu-link"><i class="fas fa-print"></i> Impression 3D</a></li>
+            <li><a href="cybersecurite.html" class="submenu-link"><i class="fas fa-shield-alt"></i> Cybersécurité</a></li>
           </ul>
         </li>
         
@@ -1432,11 +1432,11 @@
             <i class="fas fa-chevron-down"></i>
           </a>
           <ul class="submenu">
-            <li><a href="marketing.html#audit" class="submenu-link"><i class="fas fa-search"></i> Audit Express</a></li>
-            <li><a href="marketing.html#creation-site" class="submenu-link"><i class="fas fa-laptop-code"></i> Création/Réfonte de site</a></li>
-            <li><a href="marketing.html#strategie" class="submenu-link"><i class="fas fa-chess"></i> Stratégie digitale</a></li>
-            <li><a href="marketing.html#seo" class="submenu-link"><i class="fas fa-search-plus"></i> Référencement naturel</a></li>
-            <li><a href="#reseaux-sociaux" class="submenu-link"><i class="fas fa-hashtag"></i> Réseaux sociaux</a></li>
+            <li><a href="audit_express.html" class="submenu-link"><i class="fas fa-search"></i> Audit Express</a></li>
+            <li><a href="site.html" class="submenu-link"><i class="fas fa-laptop-code"></i> Création/Réfonte de site</a></li>
+            <li><a href="strategie_digitale.html" class="submenu-link"><i class="fas fa-chess"></i> Stratégie digitale</a></li>
+            <li><a href="seo.html" class="submenu-link"><i class="fas fa-search-plus"></i> Référencement naturel</a></li>
+            <li><a href="reseaux_sociaux.html" class="submenu-link"><i class="fas fa-hashtag"></i> Réseaux sociaux</a></li>
           </ul>
         </li>
         
@@ -1447,9 +1447,9 @@
             <i class="fas fa-chevron-down"></i>
           </a>
           <ul class="submenu">
-            <li><a href="accompagnement.html#automatisation" class="submenu-link"><i class="fas fa-cogs"></i> Automatisation</a></li>
-            <li><a href="accompagnement.html#bdd" class="submenu-link"><i class="fas fa-database"></i> Bases de données</a></li>
-            <li><a href="accompagnement.html#ia" class="submenu-link"><i class="fas fa-brain"></i> Intelligence Artificielle</a></li>
+            <li><a href="audit_express.html" class="submenu-link"><i class="fas fa-cogs"></i> Automatisation</a></li>
+            <li><a href="base_donnee.html" class="submenu-link"><i class="fas fa-database"></i> Bases de données</a></li>
+            <li><a href="intelligence_artificielle.html" class="submenu-link"><i class="fas fa-brain"></i> Intelligence Artificielle</a></li>
           </ul>
         </li>
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
