Mise à jour du projet avec les dernières modifications

--- a/index.html
+++ b/index.html
@@ -1496,11 +1496,11 @@
             <i class="fas fa-chevron-down"></i>
           </a>
           <ul class="submenu">
-            <li><a href="marketing.html#audit" class="submenu-link"><i class="fas fa-search"></i> Audit Express</a></li>
-            <li><a href="marketing.html#creation-site" class="submenu-link"><i class="fas fa-laptop-code"></i> Création/Réfonte de site</a></li>
-            <li><a href="marketing.html#strategie" class="submenu-link"><i class="fas fa-chess"></i> Stratégie digitale</a></li>
-            <li><a href="marketing.html#seo" class="submenu-link"><i class="fas fa-search-plus"></i> Référencement naturel</a></li>
-            <li><a href="#reseaux-sociaux" class="submenu-link"><i class="fas fa-hashtag"></i> Réseaux sociaux</a></li>
+            <li><a href="audit_express.html" class="submenu-link"><i class="fas fa-search"></i> Audit Express</a></li>
+            <li><a href="site.html" class="submenu-link"><i class="fas fa-laptop-code"></i> Création/Réfonte de site</a></li>
+            <li><a href="strategie_digitale.html" class="submenu-link"><i class="fas fa-chess"></i> Stratégie digitale</a></li>
+            <li><a href="seo.html" class="submenu-link"><i class="fas fa-search-plus"></i> Référencement naturel</a></li>
+            <li><a href="seo.html" class="submenu-link"><i class="fas fa-hashtag"></i> Réseaux sociaux</a></li>
           </ul>
         </li>
         
@@ -1511,10 +1511,10 @@
             <i class="fas fa-chevron-down"></i>
           </a>
           <ul class="submenu">
-            <li><a href="accompagnement.html#automatisation" class="submenu-link"><i class="fas fa-cogs"></i> Automatisation</a></li>
-            <li><a href="accompagnement.html#bdd" class="submenu-link"><i class="fas fa-database"></i> Bases de données</a></li>
-            <li><a href="accompagnement.html#erp" class="submenu-link"><i class="fas fa-network-wired"></i> ERP</a></li>
-            <li><a href="accompagnement.html#ia" class="submenu-link"><i class="fas fa-brain"></i> Intelligence Artificielle</a></li>
+            <li><a href="automatisation.html" class="submenu-link"><i class="fas fa-cogs"></i> Automatisation</a></li>
+            <li><a href="base_donnee.html" class="submenu-link"><i class="fas fa-database"></i> Bases de données</a></li>
+            <li><a href="erp.html" class="submenu-link"><i class="fas fa-network-wired"></i> ERP</a></li>
+            <li><a href="intelligence_artificielle.html" class="submenu-link"><i class="fas fa-brain"></i> Intelligence Artificielle</a></li>
           </ul>
         </li>
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
@@ -2167,31 +2167,31 @@
         <div class="footer-section">
           <h4>Nos Services</h4>
           <ul>
-            <li><a href="#services"><i class="fas fa-chevron-right"></i> Formations Pédagogiques</a></li>
-            <li><a href="#services"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
-            <li><a href="#services"><i class="fas fa-chevron-right"></i> Accompagnement PME</a></li>
-            <li><a href="#services"><i class="fas fa-chevron-right"></i> ERP (Gestion d'entreprise)</a></li>
-            <li><a href="#services"><i class="fas fa-chevron-right"></i> Développement Web</a></li>
-            <li><a href="#services"><i class="fas fa-chevron-right"></i> Sécurité IT</a></li>
+            <li><a href="formations.html"><i class="fas fa-chevron-right"></i> Formations Pédagogiques</a></li>
+            <li><a href="marketing.html"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
+            <li><a href="accompagnement.html"><i class="fas fa-chevron-right"></i> Accompagnement PME</a></li>
+            <li><a href="erp.html"><i class="fas fa-chevron-right"></i> ERP (Gestion d'entreprise)</a></li>
+            <li><a href="site.html"><i class="fas fa-chevron-right"></i> Développement Web</a></li>
+            <li><a href="securite.html"><i class="fas fa-chevron-right"></i> Sécurité IT</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h4>Informations</h4>
           <ul>
             <li><a href="#accueil"><i class="fas fa-chevron-right"></i> Accueil</a></li>
-            <li><a href="#services"><i class="fas fa-chevron-right"></i> Services</a></li>
+            <li><a href="service.html"><i class="fas fa-chevron-right"></i> Services</a></li>
             
             <li><a href="#temoignages"><i class="fas fa-chevron-right"></i> Témoignages</a></li>
-            <li><a href="#contact"><i class="fas fa-chevron-right"></i> Contact</a></li>
-            <li><a href="#blog"><i class="fas fa-chevron-right"></i> Actualités</a></li>
-            <li><a href="#devis"><i class="fas fa-chevron-right"></i> Devis</a></li>
+            <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
+            <li><a href="blog.html"><i class="fas fa-chevron-right"></i> Actualités</a></li>
+            <li><a href="devis.html"><i class="fas fa-chevron-right"></i> Devis</a></li>
             <li><a href="#certifications"><i class="fas fa-chevron-right"></i> Certifications</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h4>Contact</h4>
           <ul>
-            <li><a href="tel:+221771234567"><i class="fas fa-phone"></i> +221 77 123 45 67</a></li>
+            <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
             <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
