--- a/marketing.html
+++ b/marketing.html
@@ -735,19 +735,19 @@
         <div class="footer-section">
           <h4>Nos Services</h4>
           <ul>
-            <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Formations Pédagogiques</a></li>
-            <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
-            <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Accompagnement PME</a></li>
-            <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> ERP (Gestion d'entreprise)</a></li>
-            <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Développement Web</a></li>
-            <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Sécurité IT</a></li>
+            <li><a href="formations.html"><i class="fas fa-chevron-right"></i> Formations Pédagogiques</a></li>
+            <li><a href="marketing.html"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
+            <li><a href="accompagnement.html"><i class="fas fa-chevron-right"></i> Accompagnement PME</a></li>
+            <li><a href="erp.html"><i class="fas fa-chevron-right"></i> ERP (Gestion d'entreprise)</a></li>
+            <li><a href="site.html"><i class="fas fa-chevron-right"></i> Développement Web</a></li>
+            <li><a href="securite.html"><i class="fas fa-chevron-right"></i> Sécurité IT</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h4>Informations</h4>
           <ul>
             <li><a href="index.html"><i class="fas fa-chevron-right"></i> Accueil</a></li>
-            <li><a href="index.html#services"><i class="fas fa-chevron-right"></i> Services</a></li>
+            <li><a href="service.html"><i class="fas fa-chevron-right"></i> Services</a></li>
             <li><a href="blog.html"><i class="fas fa-chevron-right"></i> Actualités</a></li>
             <li><a href="index.html#temoignages"><i class="fas fa-chevron-right"></i> Témoignages</a></li>
             <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
@@ -758,7 +758,7 @@
         <div class="footer-section">
           <h4>Contact</h4>
           <ul>
-            <li><a href="tel:+221771234567"><i class="fas fa-phone"></i> +221 77 123 45 67</a></li>
+            <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
             <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
