Mise à jour du projet avec les dernières modifications

--- a/index.html
+++ b/index.html
@@ -1511,6 +1511,7 @@
             <i class="fas fa-chevron-down"></i>
           </a>
           <ul class="submenu">
+            <li><a href="index.html" class="submenu-link"><i class="fas fa-cogs"></i> Accueil</a></li>
             <li><a href="automatisation.html" class="submenu-link"><i class="fas fa-cogs"></i> Automatisation</a></li>
             <li><a href="base_donnee.html" class="submenu-link"><i class="fas fa-database"></i> Bases de données</a></li>
             <li><a href="erp.html" class="submenu-link"><i class="fas fa-network-wired"></i> ERP</a></li>
