--- a/ia.html
+++ b/ia.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestion de Bases de Données - Porokhane Digital Consulting</title>
-  <meta name="description" content="Conception, déploiement et optimisation de bases de données sur mesure. Sécurité, performance, accompagnement pédagogique.">
+  <title>Intelligence Artificielle (IA) - Porokhane Digital Consulting</title>
+  <meta name="description" content="Intégration de l'intelligence artificielle sur mesure. Diagnostic, modélisation, déploiement, accompagnement IA pour votre entreprise.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     /* CSS complet du menu, pied de page, chatbot, responsive, etc. (copié depuis strategie_digitale.html) */
     :root { --vert: #1fa47a; --vert-clair: #d1fae5; --bleu: #2563eb; --bleu-clair: #dbeafe; --blanc: #fff; --gris-bg: #f6f8fa; --gris-texte: #64748b; --gris-titre: #1e293b; --ombre: 0 4px 24px rgba(0,0,0,0.08); --rayon: 18px; --rayon-grand: 28px; }
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { background: var(--gris-bg); font-family: 'Inter', sans-serif; color: var(--gris-titre); line-height: 1.6; min-height: 100vh; background: linear-gradient(rgba(255,255,255,0.88), rgba(255,255,255,0.92)), url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=1500&q=80') no-repeat center center fixed; background-size: cover; }
-    .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
      .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
     .navbar { background: rgba(255,255,255,0.95); backdrop-filter: blur(10px); padding: 1rem 0; border-bottom: 1px solid var(--gris-fonce); position: sticky; top: 0; z-index: 1000; }
     .nav-container { display: flex; justify-content: space-between; align-items: center; }
@@ -75,6 +73,8 @@
     .chatbot-send:hover { background: linear-gradient(90deg, var(--bleu), var(--vert)); }
     .chatbot-message.bot { display: flex; align-items: flex-start; gap: 0.7rem; }
     .chatbot-avatar { width: 36px; height: 36px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 8px rgba(31,164,122,0.07); border: 2px solid var(--vert); flex-shrink: 0; }
+    body { background: var(--gris-bg); font-family: 'Inter', sans-serif; color: var(--gris-titre); line-height: 1.6; min-height: 100vh; background: linear-gradient(rgba(255,255,255,0.88), rgba(255,255,255,0.92)), url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=1500&q=80') no-repeat center center fixed; background-size: cover; }
+    .container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
     /* ... (copier tout le CSS du header/footer/chatbot de strategie_digitale.html) ... */
     .service-main { max-width: 700px; margin: 60px auto 40px auto; background: var(--blanc); border-radius: var(--rayon-grand); box-shadow: var(--ombre); padding: 40px 28px 32px 28px; position: relative; z-index: 2; }
     .service-title { display: flex; align-items: center; gap: 1rem; font-size: 2.3rem; font-weight: 800; color: var(--vert); margin-bottom: 1.2rem; }
@@ -100,8 +100,8 @@
     @media (max-width: 600px) { .service-main { padding: 18px 2vw; } .service-title { font-size: 1.4rem; } .service-step { padding: 1.2rem 1rem 1.2rem 2.8rem; } .service-step-num { left: -20px; width: 28px; height: 28px; font-size: 0.95rem; } }
   </style>
 </head>
-
 <body>
+  <!-- Navigation (copie conforme à strategie_digitale.html) -->
   <!-- Navigation -->
   <nav class="navbar" id="navbar">
     <div class="container nav-container">
@@ -148,61 +148,66 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-database"></i> Gestion de Bases de Données</div>
-    <div class="service-intro">Pourquoi une base de données sur mesure ?<br>Parce qu’une bonne gestion de l’information commence par une structuration fiable, performante et évolutive. Nous concevons et administrons des bases de données qui s’adaptent à votre activité et à vos objectifs.</div>
-    <div class="service-section-title"><i class="fas fa-cogs"></i> Notre approche : précision, performance & sécurité</div>
+    <div class="service-title"><i class="fas fa-brain"></i> Intelligence Artificielle (IA)</div>
+    <div class="service-intro">Pourquoi intégrer l’intelligence artificielle ?<br>Pour anticiper, recommander et décider plus intelligemment. Nous concevons des modèles IA qui transforment vos données en leviers d’action.</div>
+    <div class="service-section-title"><i class="fas fa-cogs"></i> Notre approche : science des données, éthique & résultats concrets</div>
     <ol class="service-steps">
       <li class="service-step">
         <div class="service-step-num">1</div>
-        <div class="service-step-title"><i class="fas fa-search"></i> Analyse des besoins métiers</div>
+        <div class="service-step-title"><i class="fas fa-lightbulb"></i> Identification des cas d’usage pertinents</div>
         <ul>
-          <li>Recueil des données à traiter</li>
-          <li>Définition des utilisateurs & droits d’accès</li>
-          <li>Évaluation du volume et de la fréquence des opérations</li>
+          <li>Prédiction de comportements clients</li>
+          <li>Détection d’anomalies</li>
+          <li>Recommandation de produits/contenus</li>
+          <li>Traitement du langage (chatbot, analyse d’avis, etc.)</li>
         </ul>
       </li>
       <li class="service-step">
         <div class="service-step-num">2</div>
-        <div class="service-step-title"><i class="fas fa-project-diagram"></i> Conception technique</div>
+        <div class="service-step-title"><i class="fas fa-database"></i> Constitution et traitement des données</div>
         <ul>
-          <li>Choix des technologies adaptées (MySQL, PostgreSQL, MongoDB, etc.)</li>
-          <li>Modélisation relationnelle ou NoSQL</li>
-          <li>Définition des tables, relations et schémas optimisés</li>
+          <li>Collecte, nettoyage, structuration</li>
+          <li>Enrichissement & normalisation</li>
+          <li>Visualisation initiale (DataViz)</li>
         </ul>
       </li>
       <li class="service-step">
         <div class="service-step-num">3</div>
-        <div class="service-step-title"><i class="fas fa-shield-alt"></i> Déploiement & sécurisation</div>
+        <div class="service-step-title"><i class="fas fa-brain"></i> Modélisation & entraînement</div>
         <ul>
-          <li>Hébergement sécurisé (cloud ou local)</li>
-          <li>Mise en place de sauvegardes automatiques</li>
-          <li>Gestion des accès & des autorisations</li>
+          <li>Sélection d’algorithmes adaptés (Machine Learning / Deep Learning)</li>
+          <li>Entraînement & validation croisée</li>
+          <li>Itérations jusqu’à performance cible atteinte</li>
         </ul>
       </li>
       <li class="service-step">
         <div class="service-step-num">4</div>
-        <div class="service-step-title"><i class="fas fa-sync-alt"></i> Suivi et optimisation continue</div>
+        <div class="service-step-title"><i class="fas fa-rocket"></i> Intégration et déploiement</div>
         <ul>
-          <li>Monitoring des performances</li>
-          <li>Ajustements en fonction des pics de charge</li>
-          <li>Maintenance évolutive</li>
+          <li>API IA / microservices</li>
+          <li>Intégration dans vos outils ou applications web</li>
+          <li>Tableau de bord décisionnel IA</li>
         </ul>
       </li>
     </ol>
-    <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Ce qui rend notre service unique</div>
+    <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Ce qui rend notre IA différente</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-cogs"></i> Conception personnalisée</li>
-      <li><i class="fas fa-code-branch"></i> Technologies open-source & robustes</li>
-      <li><i class="fas fa-shield-alt"></i> Forte culture de la sécurité des données</li>
-      <li><i class="fas fa-chalkboard-teacher"></i> Accompagnement pédagogique des utilisateurs</li>
+      <li><i class="fas fa-bullseye"></i> Orientée résultats, pas buzzword</li>
+      <li><i class="fas fa-eye"></i> Transparence et traçabilité des modèles</li>
+      <li><i class="fas fa-user-tie"></i> Expertise humaine au cœur des décisions</li>
+      <li><i class="fas fa-globe-africa"></i> Adaptée aux réalités africaines et francophones</li>
     </ul>
     <div class="service-contact">
-      <strong>Contact :</strong> Pour bénéficier de votre solution sur mesure :<br>
+      <strong>Contact :</strong> Pour intégrer l’IA à vos projets :<br>
       <strong>Email :</strong> <a href="mailto:responsable.marketing@digital-porokhane.com">responsable.marketing@digital-porokhane.com</a><br>
       <strong>Téléphone :</strong> <a href="tel:+221776125660">+221 77 612 56 60</a><br>
       <strong>Site web :</strong> <a href="https://www.porokhane.digital" target="_blank">www.porokhane.digital</a>
     </div>
   </main>
+  <!-- Footer, chatbot, JS (copie conforme à strategie_digitale.html) -->
+  <footer class="footer"> ... </footer>
+
+
   <!-- Pied de page -->
   <footer class="footer">
     <form class="newsletter" id="newsletterForm">
@@ -288,5 +293,111 @@
     </form>
   </div>
 
+  <!-- Chatbot et JS ... -->
+
+  <script>
+    // Navbar scroll effect
+    const navbar = document.getElementById('navbar');
+    window.addEventListener('scroll', function() {
+      if (window.scrollY > 50) {
+        navbar.classList.add('scrolled');
+      } else {
+        navbar.classList.remove('scrolled');
+      }
+    });
+    // Assurer que les sous-menus restent ouverts quand on les survole
+    document.querySelectorAll('.nav-item').forEach(item => {
+      item.addEventListener('mouseenter', () => {
+        item.querySelector('.submenu')?.style.setProperty('display', 'block', 'important');
+      });
+      item.addEventListener('mouseleave', () => {
+        item.querySelector('.submenu')?.style.setProperty('display', 'none', 'important');
+      });
+    });
+    // Smooth scrolling for anchor links
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        const targetId = this.getAttribute('href');
+        if (targetId === '#') return;
+        const targetElement = document.querySelector(targetId);
+        if (targetElement) {
+          window.scrollTo({ top: targetElement.offsetTop - 80, behavior: 'smooth' });
+        }
+      });
+    });
+    // Newsletter form
+    document.getElementById('newsletterForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      alert('Merci pour votre inscription à notre newsletter ! Vous recevrez bientôt nos conseils et actualités.');
+      this.reset();
+    });
+  </script>
+  <script>
+    // Chatbot FAQ
+    const chatbotFAQ = {
+      'services': "Nous proposons : formations (robotique, impression 3D, cybersécurité), marketing digital, accompagnement (automatisation, IA, bases de données), développement web et plus encore !",
+      'devis': "Pour demander un devis, cliquez sur 'Demander un devis' dans le menu ou rendez-vous sur la page devis. Nous vous répondrons rapidement !",
+      'délais': "Nos délais varient selon le projet, mais nous nous engageons à livrer dans les temps convenus, avec un suivi régulier.",
+      'formations': "Oui, nous proposons des formations en robotique, impression 3D, cybersécurité et plus. Consultez la page Formations pour plus d'infos !",
+      'contacter': "Vous pouvez nous contacter via la page Contact, par téléphone ou par email. Nous sommes à votre écoute !",
+      'salutation': "Bonjour et bienvenue chez Porokhane Digital Consulting ! 👋\n\nJe peux répondre à vos questions sur :\n• Nos services\n• Comment demander un devis\n• Nos délais de livraison\n• Nos formations\n• Comment nous contacter\n\nCliquez sur une suggestion ou posez votre question !"
+    };
+    const chatbotBtn = document.getElementById('chatbotBtn');
+    const chatbotWindow = document.getElementById('chatbotWindow');
+    const chatbotClose = document.getElementById('chatbotClose');
+    const chatbotBody = document.getElementById('chatbotBody');
+    const chatbotForm = document.getElementById('chatbotForm');
+    const chatbotInput = document.getElementById('chatbotInput');
+    const chatbotSuggestions = document.getElementById('chatbotSuggestions');
+    chatbotBtn.onclick = () => {
+      chatbotWindow.style.display = 'flex';
+      setTimeout(() => chatbotInput.focus(), 300);
+    };
+    chatbotClose.onclick = () => {
+      chatbotWindow.style.display = 'none';
+    };
+    chatbotSuggestions.onclick = function(e) {
+      if (e.target.classList.contains('chatbot-suggestion')) {
+        const question = e.target.textContent;
+        addUserMessage(question);
+        respondToUser(question);
+      }
+    };
+    chatbotForm.onsubmit = function(e) {
+      e.preventDefault();
+      const question = chatbotInput.value.trim();
+      if (question) {
+        addUserMessage(question);
+        respondToUser(question);
+        chatbotInput.value = '';
+      }
+    };
+    function addUserMessage(text) {
+      const msg = document.createElement('div');
+      msg.className = 'chatbot-message user';
+      msg.textContent = text;
+      chatbotBody.appendChild(msg);
+      chatbotBody.scrollTop = chatbotBody.scrollHeight;
+    }
+    function addBotMessage(text) {
+      const msg = document.createElement('div');
+      msg.className = 'chatbot-message bot';
+      msg.innerHTML = `<img src="https://randomuser.me/api/portraits/men/77.jpg" class="chatbot-avatar" alt="Conseiller Porokhane"/>` + `<span>${text}</span>`;
+      chatbotBody.appendChild(msg);
+      chatbotBody.scrollTop = chatbotBody.scrollHeight;
+    }
+    function respondToUser(question) {
+      let response = "Je suis désolé, je n'ai pas compris votre question. Essayez une des suggestions ci-dessus ou contactez-nous directement.";
+      const q = question.toLowerCase();
+      if (q.includes('service')) response = chatbotFAQ['services'];
+      else if (q.includes('devis')) response = chatbotFAQ['devis'];
+      else if (q.includes('délai') || q.includes('delai')) response = chatbotFAQ['délais'];
+      else if (q.includes('formation')) response = chatbotFAQ['formations'];
+      else if (q.includes('contact')) response = chatbotFAQ['contacter'];
+      else if (q.includes('salut') || q.includes('bonjour') || q.includes('bonsoir') || q.includes('hello')) response = chatbotFAQ['salutation'];
+      setTimeout(() => addBotMessage(response), 600);
+    }
+  </script>
 </body>
-</html>
+</html> 
