Mise à jour du projet avec les dernières modifications

--- a/accompagnement.html
+++ b/accompagnement.html
@@ -670,9 +670,28 @@
             <p style="font-weight:600;color:var(--bleu);margin-bottom:0.5rem;">L’IA au service de votre performance</p>
             <p>Intégrez l'IA dans vos processus pour des prises de décision plus intelligentes et une automatisation avancée de vos opérations.</p>
             
-            <a href="intelligence_artificielle.html" class="service-btn">voir plus</a>
+            <a href="ia.html" class="service-btn">voir plus</a>
           </div>
         </div>
+
+          <!-- ERP -->
+
+           <div class="service-card" id="ia">
+          <div class="service-image">
+            <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995?auto=format&fit=crop&w=600&q=80" alt="Intelligence Artificielle">
+          </div>
+          <div class="service-content">
+            <div class="service-icon">
+              <i class="fas fa-brain"></i>
+            </div>
+            <h3>ERP (Gestion d'entreprise)</h3>
+            <p style="font-weight:600;color:var(--bleu);margin-bottom:0.5rem;">L’IA au service de votre performance</p>
+            <p>Mise en place de solutions ERP sur-mesure pour piloter efficacement vos processus métiers : gestion commerciale, stock, RH, finance, etc.</p>
+            
+            <a href="erp.html" class="service-btn">voir plus</a>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
