--- a/index.html
+++ b/index.html
@@ -1774,7 +1774,7 @@
           <img src="https://images.unsplash.com/photo-1571260899304-425eee4c7efc?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Formations Pédagogiques">
           <h3>Formations Pédagogiques</h3>
           <p>Robotique, Impression 3D et Cybersécurité. Des formations adaptées à tous les niveaux.</p>
-          <a href="#Formations" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
+          <a href="formations.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
         </div>
   
         <!-- Marketing Digital -->
@@ -1782,7 +1782,7 @@
           <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Marketing Digital">
           <h3>Marketing Digital</h3>
           <p>Audit Express, Création/Réfonte de site, Stratégie digitale, SEO et Réseaux sociaux.</p>
-          <a href="#digitale" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
+          <a href="marketing.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
         </div>
   
         <!-- Accompagnement -->
@@ -1790,14 +1790,14 @@
           <img src="https://images.unsplash.com/photo-1516245834210-c4c142787335?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Accompagnement">
           <h3>Accompagnement pour les PME</h3>
           <p>Automatisation, Bases de données, ERP et Intelligence Artificielle pour votre entreprise.</p>
-          <a href="#accompagnement" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
+          <a href="accompagnement.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
         </div>
         <!-- ERP -->
         <div class="service-card">
           <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=400&q=80" alt="ERP">
           <h3>ERP (Gestion d'entreprise)</h3>
           <p>Mise en place de solutions ERP sur-mesure pour piloter efficacement vos processus métiers : gestion commerciale, stock, RH, finance, etc.</p>
-          <a href="#erp" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
+          <a href="erp.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
         </div>
   
         <!-- Service supplémentaire 1 -->
@@ -1805,7 +1805,7 @@
           <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Développement Web">
           <h3>Développement Web</h3>
           <p>Création de sites vitrines et e-commerce sur mesure pour votre activité.</p>
-          <a href="#" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
+          <a href="site.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
         </div>
   
         
@@ -1815,7 +1815,7 @@
           <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Cybersécurité">
           <h3>Sécurité IT</h3>
           <p>Protection de vos données et infrastructures numériques.</p>
-          <a href="#" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
+          <a href="securite.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
         </div>
       </div>
     </div>
@@ -1841,7 +1841,7 @@
             <div class="blog-meta"><i class="far fa-calendar-alt"></i> 15 juin 2024 • <i class="far fa-folder"></i> Cybersécurité</div>
             <h3>Sécuriser son site WordPress</h3>
             <p>Protégez votre site WordPress contre les piratages avec 10 conseils simples et efficaces, accessibles à tous.</p>
-            <a href="#" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
+            <a href="wordpress.html" class="btn btn-secondary" id="openWpModal"><i class="fas fa-book-open"></i> Lire l'article</a>
           </div>
         </div>
   
