--- a/devis.html
+++ b/devis.html
@@ -1410,7 +1410,7 @@
     <div class="container nav-container">
       <div class="nav-logo"><h2></i> Porokhane Digital</h2></div>
       <ul class="nav-menu">
-        <li><a href="index.html#accueil" class="nav-link">Accueil</a></li>
+        <li><a href="index.html" class="nav-link">Accueil</a></li>
         <li><a href="a-propos.html" class="nav-link">À propos</a></li>
         <!-- Formations -->
         <li class="nav-item">
@@ -1419,9 +1419,9 @@
             <i class="fas fa-chevron-down"></i>
           </a>
           <ul class="submenu">
-            <li><a href="robotique.html" class="submenu-link"><i class="fas fa-robot"></i> Robotique</a></li>
-            <li><a href="impression_3D.html" class="submenu-link"><i class="fas fa-print"></i> Impression 3D</a></li>
-            <li><a href="cybersecurite.html" class="submenu-link"><i class="fas fa-shield-alt"></i> Cybersécurité</a></li>
+            <li><a href="robotique.html" class="submenu-link">Robotique</a></li>
+            <li><a href="impression_3D.html" class="submenu-link">Impression 3D</a></li>
+            <li><a href="cybersecurite.html" class="submenu-link">Cybersécurité</a></li>
           </ul>
         </li>
         
@@ -1432,11 +1432,11 @@
             <i class="fas fa-chevron-down"></i>
           </a>
           <ul class="submenu">
-            <li><a href="audit_express.html" class="submenu-link"><i class="fas fa-search"></i> Audit Express</a></li>
-            <li><a href="site.html" class="submenu-link"><i class="fas fa-laptop-code"></i> Création/Réfonte de site</a></li>
-            <li><a href="strategie_digitale.html" class="submenu-link"><i class="fas fa-chess"></i> Stratégie digitale</a></li>
-            <li><a href="seo.html" class="submenu-link"><i class="fas fa-search-plus"></i> Référencement naturel</a></li>
-            <li><a href="reseaux_sociaux.html" class="submenu-link"><i class="fas fa-hashtag"></i> Réseaux sociaux</a></li>
+            <li><a href="audit_express.html" class="submenu-link"> Audit Express</a></li>
+            <li><a href="site.html" class="submenu-link">Création/Réfonte de site</a></li>
+            <li><a href="strategie_digitale.html" class="submenu-link">Stratégie digitale</a></li>
+            <li><a href="seo.html" class="submenu-link">Référencement naturel</a></li>
+            <li><a href="reseaux_sociaux.html" class="submenu-link">Réseaux sociaux</a></li>
           </ul>
         </li>
         
@@ -1447,9 +1447,10 @@
             <i class="fas fa-chevron-down"></i>
           </a>
           <ul class="submenu">
-            <li><a href="audit_express.html" class="submenu-link"><i class="fas fa-cogs"></i> Automatisation</a></li>
-            <li><a href="base_donnee.html" class="submenu-link"><i class="fas fa-database"></i> Bases de données</a></li>
-            <li><a href="intelligence_artificielle.html" class="submenu-link"><i class="fas fa-brain"></i> Intelligence Artificielle</a></li>
+            <li><a href="audit_express.html" class="submenu-link">Automatisation</a></li>
+            <li><a href="base_donnee.html" class="submenu-link">Bases de données</a></li>
+            <li><a href="erp.html" class="submenu-link">ERP</a></li>
+            <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
