--- a/wordpress.html
+++ b/wordpress.html
@@ -199,6 +199,12 @@
 </head>
 <body>
 
+<nav class="navbar" id="navbar">
+  <div class="container nav-container">
+    <div class="nav-logo"><h2>Porokhane Digital</h2></div>
+  </div>
+</nav>
+
 <div class="container">
   <!-- Article principal -->
   <h1>🔒 Sécuriser son site WordPress</h1>
